# estimation-test

./: .gitignore  .travis.yml  LICENSE  Pipfile  docker-compose.yml  manage.py  pyproject.toml  readme.rst  requirements.txt  setup.cfg
app/: settings.py  urls.py
estimate_price/: settings.py  urls.py  wsgi.py
estimation/: helpers.py  models.py  views.py
estimation/migrations/: 0001_initial.py  0002_auto_20190509_0309.py
templates/: index.html
test/features/: behave_fixtures.py  delivery.feature  environment.py  pickup.feature
test/features/steps/: delivery.py  pickup.py
tests/features/: delivery.feature  environment.py
tests/features/steps/: pickup.py
tests/fixtures/: holiday.json
