[tool.poetry]
name = "estimation-test"
version = "0.2.0"
description = "Estimation Test Repo"
authors = ["ahmadsyafrudin <sfrmd4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
psycopg2-binary = "^2.8.5"
python-dateutil = "^2.8.1"
bumpversion = "^0.6.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^19.10b0"
docutils = "^0.16"
flake8 = "^3.8.3"
codecov = "^2.1.8"
pygments = "^2.6.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
