[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[metadata]
name = estimation-test
version = 0.1.0
author = Ahmad Syafrudin
author-email = sfrmd4@gmail.com
home-page = https://github.com/ahmadsyafrudin
description = project notes about write test in python
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = COPYING
platform = any
keywords = python, django, behave test, API
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = ==3.8.*
packages = estimation
test_suite = tests
setup_requires = 
	setuptools
	isort
install_requires = 
	django
	psycopg2-binary
	python-dateutil

[options.extras_require]
dev = 
	docutils
	Pygments
	flake8
	black
	behave
test = 
	green
	coverage
ci = 
	codacy-coverage
	codecov

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines = 
	pragma: no cover
	if False

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
